<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark"
    >

    <TextView
        android:id="@+id/tv_welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="177dp"
        android:textSize="@dimen/welcome_size"
        android:textColor="@android:color/white"
        android:text="@string/welcome_msg" />

    <Button
        android:layout_below="@id/tv_welcome_msg"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_below="@id/btn_register"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"

        android:text="@string/login" />

</RelativeLayout>